# Easy_Log

./: .gitignore  CMakeLists.txt  README.md
include/: Logger.cpp  Logger.h
src/: main.cpp
